@@ -177,25 +177,7 @@
                 <textoffsetx>10</textoffsetx>
                 <texturefocus>input-focus.png</texturefocus>
                 <texturenofocus>input-nofocus.png</texturenofocus>
-            </control>
-            
-            <!--
-            TODO: Use slider when added to python support
-            <control type="sliderex" id="202">
-                <description>Recording Priority Slider</description>
-                <height>35</height>
-                <width>650</width>
-                <texturefocus>input-focus.png</texturefocus>
-                <texturenofocus>input-nofocus.png</texturenofocus>
-                <sliderwidth>100</sliderwidth>
-                <sliderheight>20</sliderheight>
-                <texturesliderbar>osd_slider_bg.png</texturesliderbar>
-                <textureslidernib>osd_slider_nibNF.png</textureslidernib>
-                <textureslidernibfocus>osd_slider_nibFO.png</textureslidernibfocus>
-                <font>font12</font>
-                <textoffsetx>10</textoffsetx>
-            </control>
-            -->
+            </control>            
              
             <control type="button" id="203">
                 <description>check for dupes using</description>   
@@ -331,6 +313,19 @@
                 <texturenofocus>input-nofocus.png</texturenofocus>
             </control>
 
+            <control type="button" id="219">
+                <description>recording profile</description>
+                <label>SCRIPT1128</label>
+                <label2>$INFO[Window.Property(recordingProfile)]</label2>
+                <width>650</width>
+                <height>35</height>
+                <font>font12</font>
+                <align>left</align>
+                <textoffsetx>10</textoffsetx>
+                <texturefocus>input-focus.png</texturefocus>
+                <texturenofocus>input-nofocus.png</texturenofocus>
+            </control>
+ 
             <control type="radiobutton" id="214">
                 <description>userjob1</description>
                 <label>SCRIPT1124</label>
